ecmascript/parser/tests/test262-error-references/fail/c79647e7baf81f8f.js.stderr
error: Expected 2 hex characters
 --> $DIR/tests/test262-parser/fail/c79647e7baf81f8f.js:1:2
  |
1 | "\x0";
  |  ^^^

